# aiidalab-solara-qe

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.ipynb  app.py  install-pseudos.sh  pyproject.toml  test.py
src/aiidalab_qe/: main.py  utils.py
src/aiidalab_qe/api/: main.py  types.py
src/aiidalab_qe/assets/css/: home.css  main.css  navbar.css  parameters.css  properties.css  resources.css  results.css  structure.css  wizard.css  workbench.css
src/aiidalab_qe/common/: context.py  hooks.py  paths.py  reactive.py  schema.py  types.py
src/aiidalab_qe/common/components/: __init__.py  html.py  selection.py
src/aiidalab_qe/common/config/: paths.py
src/aiidalab_qe/common/hooks/: __init__.py  weas.py
src/aiidalab_qe/common/models/: codes.py  reactive.py  schema.py  utils.py
src/aiidalab_qe/common/services/: aiida.py
src/aiidalab_qe/components/: __init__.py
src/aiidalab_qe/components/app/: __init__.py  app.py
src/aiidalab_qe/components/header/: __init__.py  header.py  logo.py
src/aiidalab_qe/components/navbar/: __init__.py  bar.py  item.py  navbar.py
src/aiidalab_qe/components/parameters/: __init__.py  step.py  substep.py
src/aiidalab_qe/components/resources/: __init__.py  resource.py  step.py
src/aiidalab_qe/components/results/: step.py  structure.py
src/aiidalab_qe/components/structure/: step.py
src/aiidalab_qe/components/submission/: __init__.py  step.py
src/aiidalab_qe/components/wizard/: __init__.py  models.py  step.py  steps.py  store.py  wizard.py
src/aiidalab_qe/config/: deployment.py  paths.py  proxy.py
src/aiidalab_qe/pages/: __init__.py
src/aiidalab_qe/pages/history/: __init__.py  history.py
src/aiidalab_qe/pages/home/: __init__.py  home.py
src/aiidalab_qe/pages/resources/: __init__.py  resources.py
src/aiidalab_qe/plugins/: models.py  outline.py  types.py  utils.py
src/aiidalab_qe/workflows/: __init__.py  utils.py
tests/: test_header.py  test_navbar.py  test_wizard.py
(+76 files in other folders)
