[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
name = "aiidalab-solara-qe"
version = "0.1.0"
description = "The AiiDAlab Quantum ESPRESSO app reworked in Solara"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["aiidalab", "quantum-espresso", "solara"]
dependencies = ["solara~=1.0", "aiida-core~=2.3,<3", "pydantic~=2.0"]

[project.urls]
repository = "https://github.com/edan-bainglass/aiidalab-solara-qe.git"

[tool.flit.module]
name = "aiidalab_qe"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
