[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
name = "aiidalab-solara-qe"
version = "0.1.0"
description = "The AiiDAlab Quantum ESPRESSO app reworked in Solara"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["aiidalab", "quantum-espresso", "solara"]
dependencies = [
    "solara~=1.0",
    "aiida-core~=2.6,<3",
    "aiida-quantumespresso>=4.7,<5",
    "pydantic~=2.0",
    "ase~=3.25.0",
    "pymatgen~=2024.6.10",
    "weas-widget",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-regressions",
    "pytest-playwright",
    "pytest-ipywidgets[solara, notebook]",
    "pre-commit",
    "sphinx",
    "sphinx-design",
    "pydata-sphinx-theme",
]

[project.urls]
repository = "https://github.com/edan-bainglass/aiidalab-solara-qe.git"

[project.entry-points."aiidalab_qe.properties"]
bands = "aiidalab_qe.plugins.bands:bands"
pdos = "aiidalab_qe.plugins.pdos:pdos"

[tool.flit.module]
name = "aiidalab_qe"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = ["--cov=aiidalab_qe", "-sv", "-ra"]
